--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ a {
 }
 
 a:hover {
-  color: #0da508;
+  color: #ffffff;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
@@ -998,7 +998,7 @@ a:hover {
 }
 
 body {
-  background-color: rgb(64, 110, 88);
+  background-color: rgb(64, 92, 110);
   color: #4e4e4e;
 }
 
@@ -1020,12 +1020,12 @@ body {
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #3d6153;
+  background-color: #3a6177;
 }
 
 .portfolio-details .portfolio-info {
   padding: 30px;
-  background-color: rgb(116, 136, 128);
+  background-color: rgb(116, 132, 136);
   box-shadow: 0px 0 30px rgba(78, 78, 78, 0.08);
 }
 
